--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.yarn-offline-mirror/lodash.isequal-4.5.0.tgz
+.yarn-offline-mirror/node-sass-4.12.0.tgz
